k8s-aws/kong/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-routing
  annotations:
    kubernetes.io/ingress.class: kong
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: aws-dev-issuer
spec:
  tls:
    - secretName: aws-dev-ingress-tls-secret
      hosts:
        - aws-dev.resourcewatch.org
  rules:
  - http:
      paths:
      - path: /api/v1/dataset/.*/widget*
        backend:
          serviceName: widget
          servicePort: 80
      - path: /api/v1/dataset*
        backend:
          serviceName: dataset
          servicePort: 80
      - path: /api/v1/widget*
        backend:
          serviceName: widget
          servicePort: 80
