k8s-aws/kong/kong-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-routing
spec:
  rules:
  - http:
      paths:
      - path: /v1/dataset
        backend:
          serviceName: control-tower
          servicePort: http
